# modder-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
core/: Cargo.toml  README.md
core/src/: actions.rs  cli.rs  lib.rs  main.rs  metadata.rs
core/src/curseforge_wrapper/: file_utils.rs  hash.rs  mod.rs  structs.rs
core/src/gh_releases/: mod.rs
core/src/modrinth_wrapper/: modrinth.rs
src/: actions.rs  cli.rs  lib.rs  main.rs  metadata.rs
src/gh_releases/: mod.rs  structs.rs
src/modrinth_wrapper/: modrinth.rs
tui/: Cargo.toml  LICENSE  README.md  demo_tui.tape
tui/src/: app.rs  cli.rs  components.rs  config.rs  logging.rs  main.rs  tui.rs
tui/src/components/: add.rs  home.rs  list.rs  toggle.rs
