[package]
name = "modder"
version = "1.0.0"
edition = "2024"
description = "Modder-rs is a mod manager for Minecraft. This crate contains the cli and the core logic that is also used by the TUI wrapper."
license = "MIT"
authors = ["JayanAXHF"]
homepage = "https://github.com/JayanAXHF/modder-rs"
repository = "https://github.com/JayanAXHF/modder-rs"
readme = "README.md"
keywords = ["minecraft", "mod", "manager", "cli"]
categories = ["command-line-utilities", "games"]

[dependencies]
better-panic = "0.3.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
colored = "3.0.0"
futures = "0.3.31"
hex = "0.4.3"
hmac-sha512 = "1.1.7"
inquire = "0.7.5"
itertools = "0.14.0"
percent-encoding = "2.3.1"
pretty_assertions = { version = "1.4.1" }
reqwest = "0.12.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tabwriter = "1.4.1"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
zip = "4.2.0"

[profile.release]
lto = true
strip = true
